ChangeLog

May 2019: Updated parts of Topo3D/Test/ and the agreement with the analytical solution improved

8 May 2019: Release v1.1.5  do:10.5281/zenodo.2678125

Apr 2019: work in Topo3D/ directory:
readhorizons can now read cropped domains; lots of renaming in the Topo3D/ directory to enhance usability; readdem has moved from topos.f90 to crater_common.f90, because input path is now defined in filemanager.

17 Apr 2019: The last month or so involved code cleanup, especially in the Asteroids/ directory.

3 Mar 2019: minor updates plus a semi-implicit solver for the heat equation in a spherically symmetric geometry in sphere1d_implicit.f90

Sep 2018: most of the code development over the past 14 months was for the 3D surface energy balance model for Mars

Sep 2018: function flux_mars is replaced by subroutine flux_mars2, which returns direct and diffuse irradiances separately

Aug 2018: moved mars-specific subroutines out of grids.f

Feb 2018: recursive implementation of multigrid

7 Feb 2018: added conductionQ2, which is about 1/3 faster than the legendary conductionQ, but limited to time-constant thermal properties

16 Dec 2017: first version of 3D illumination code for Mars

4 Oct 2017: Release v1.1.4  doi:10.5281/zenodo.1001854

24 Aug 2017: gethorizon has been transformed into a module to allow elemental attribute, and thus parallelization

2 Aug 2017: first implementation of multigrid method for horizons calculation

1 Aug 2017: finished subroutine findallhorizon, which replaces findonehorizon in shadows.f90

16 Jul 2017: Release v1.1.3  doi:10.5281/zenodo.830052

20 Oct 2016: Release v1.1.2  doi:10.5281/zenodo.162490

9 Oct 2016: First version of User Guide

3 Apr 2016: Release v1.1.1  doi:10.5281/zenodo.48851

19 Dec 2015: Release v1.1.0  doi:10.5281/zenodo.35566

19 Dec 2015: final version of asynchronous model for ice loss from asteroids

22 Oct 2015: Release v1.0  doi:10.5281/zenodo.32616

Aug 2015: moved to GitHub
