@@ -19,7 +19,7 @@ Output: fieldofviews.topo81
 
 RUN 1: COMPARISON WITH INGERSOLL SOLUTION
 
-cratersQ_equilbr.f90 calculates equilibrium solution, takes 30 seconds
+cratersQ_equilbr.f90 calculates equilibrium solution, takes 13 seconds
 albedo 0.12, emissivity 0.95
 sun elevation 10 degree, solar constant 1365 W/m^2
 
@@ -31,7 +31,7 @@ analytical solution according to Ingersoll et al. (1992), Icarus 100, 40-47.
 
 RUN 2: ONE SOLAR DAY
 
-cratersQ_moon.f90 calculates one solar day, takes 6 minutes
+cratersQ_moon.f90 calculates one solar day, takes 1 minute
 latitude 80 degree, declination 0 degree (hence 10 degree maximum solar elevation)
 time step 1/100th of solar day
 
@@ -41,7 +41,7 @@ Used qmean1.m to make figure qmean.png
 
 RUN 3: WITH SUBSURFACE CONDUCTION
 
-cratersQ_moon.f90 as Run 2, but with subsurface conduction, takes 1 hour
+cratersQ_moon.f90 as Run 2, but with subsurface conduction, takes 10 minutes
 domain depth = 5 skin depths, 12 solar days, thermal inertia 100 tiu
 
 Output: qmean.topo81_wsurfcond (meaning of columns is in write(22,... )
