@@ -2,10 +2,10 @@ program fieldofviews
 !*****************************************************************************
 ! 1. calculates horizon for every location and every azimuth
 ! 2. determines visibility of surface elements
-! 3. calculates subtended angle for every surface element
+! 3. calculates view factors for every surface element
 !
-! Without command line parameters, it executes serially
-! With two integers as input parameter, it executes parallel implementation
+! Without command line arguments, it executes serially
+! With two integers as input arguments, it executes parallel implementation
 !     e.g., 'a.out 6 2'  processes second out of six slices of domain
 !
 ! written by Norbert Schorghofer 2010-2019
@@ -31,16 +31,18 @@ program fieldofviews
 
   select case(narg)
   case (0)  ! serial implementation
-     print *,'...creating files horizons.dat and fieldofviews.dat'
+     print *,'...creating files horizons.dat and viewfactors.dat'
      open(unit=21,file='horizons.dat',status='unknown',action='write')
-     open(unit=22,file='fieldofviews.dat',status='unknown',action='write')
+     !open(unit=22,file='fieldofviews.dat',status='unknown',action='write')
+     open(unit=23,file='viewfactors.dat',status='unknown',action='write')
      ilower = 2; iupper = NSx-1
 
   case (2)  ! parallel implementation
      call slicer(NSx,ilower,iupper,extc)
-     print *,'...creating files horizon and fieldofview...',extc
+     print *,'...creating files horizon and viewfactor...',extc
      open(unit=21,file='horizon.'//extc,status='unknown',action='write')
-     open(unit=22,file='fieldofview.'//extc,status='unknown',action='write')
+     !open(unit=22,file='fieldofview.'//extc,status='unknown',action='write')
+     open(unit=23,file='viewfactor.'//extc,status='unknown',action='write')
      ! merge and sort output files with script
      
   case default
@@ -58,12 +60,13 @@ program fieldofviews
         write(21,'(2(i0,1x))',advance='no') i,j
         call compactoutput(21,smax,naz)
         call refinevisibility(i,j,h,visibility)
-        call find3dangle(h,i,j,22,visibility)
+        call find3dangle(h,i,j,23,visibility)
      enddo
   enddo
 
   close(21)
-  close(22)
+  !close(22)
+  close(23)
   print *,'Finished'
 end program fieldofviews
 
