@@ -9,13 +9,15 @@ program fieldproperties
 
   implicit none
   integer i, j, CCMAX
-  real(8), dimension(NSx,NSy) :: h, skysize1, landsize, skysize2 ! skysize+landsize=2*pi
   integer, dimension(NSx,NSy) :: cc
+  real(8), dimension(NSx,NSy) :: h, skysize1, landsize, skysize2 ! skysize+landsize=2*pi
+  real(8), dimension(NSx,NSy) :: gterm, surfaceSlope, azFac
   integer(2), dimension(:,:,:), allocatable :: ii,jj
   real(4), dimension(:,:,:), allocatable :: dO12
   real(8), parameter :: pi=3.1415926535897932
   logical, parameter :: fieldofview=.false.
-
+  character(len = *), parameter :: ffn='Data2/fieldofviews.'//fileext
+  
   call readdem(h)
   !call difftopo(NSx,NSy,h,dx,dy,surfaceSlope,azFac)
   
@@ -43,10 +45,13 @@ program fieldproperties
   open(unit=21,file='tmp.dat',status='unknown',action='write')
   do i=2,NSx-1
      do j=2,NSy-1
-        write(21,'(2(i4,1x),f9.2,2(1x,f6.3))') &
-             & i,j,h(i,j),2*pi-skysize2(i,j),landsize(i,j)
+        write(21,'(2(i4,1x),f9.2,2x,1x,f5.3,2x,f6.3)') &
+             & i,j,h(i,j),2*pi-skysize(i,j),landsize(i,j)
+        !write(21,'(2(i4,1x),f9.2,1x,f6.4,1x,f6.3,3(2x,f6.3))') &
+        !     & i,j,h(i,j),surfaceSlope(i,j),azFac(i,j),2*pi-skysize2(i,j),gterm(i,j)
      enddo
   enddo
   close(21)
 
 end program fieldproperties
+
