@@ -1,5 +1,7 @@
 ChangeLog
 
+17 May 2019: Topo3D/  switched from storing subtended angles to viewfactors, which saves a factor of cos(v) later and ultimately provides a speedup by a factor of several.
+
 May 2019: Updated parts of Topo3D/Test/ and the agreement with the analytical solution improved
 
 8 May 2019: Release v1.1.5  do:10.5281/zenodo.2678125
